RESOLVED FIXED135852
Small region (~1px tall) where you get the selection button instead of the phone number overlay
https://bugs.webkit.org/show_bug.cgi?id=135852
Summary Small region (~1px tall) where you get the selection button instead of the ph...
Tim Horton
Reported 2014-08-12 13:48:06 PDT
Steps to Reproduce: 1. Load http://www.apple.com/contact/ 2. Highlight the middle of a phone number. 3. Put the mouse near the bottom edge of the highlight. Move it around till you find the sweet spot. Expected: Telephone number highlight should take priority over the selection highlight. Actual: There's a small region where you can get the selection highlight and no telephone number highlight, because we think the telephone number highlight isn't hovered, but the selection highlight is slightly bigger. <rdar://problem/17992795>
Attachments
patch (5.74 KB, patch)
2014-08-12 13:49 PDT, Tim Horton
enrica: review+
Tim Horton
Comment 1 2014-08-12 13:49:17 PDT
Tim Horton
Comment 2 2014-08-12 15:49:03 PDT
Note You need to log in before you can comment on or make changes to this bug.