Small region (~1px tall) where you get the selection button instead of the phone number overlay https://bugs.webkit.org/show_bug.cgi?id=135852 <rdar://problem/17992795>

Reviewed by Enrica Casucci.

* WebProcess/WebPage/ServicesOverlayController.h:
* WebProcess/WebPage/mac/ServicesOverlayController.mm:
(WebKit::ServicesOverlayController::findTelephoneNumberHighlightContainingSelectionHighlight):
(WebKit::ServicesOverlayController::determineActiveHighlight):
If our new active highlight is a selection highlight that is completely contained
by one of the phone number highlights, we'll make the phone number highlight active
even if it's not hovered. This fixes the case where the selection highlight
(a subset of a telephone number) is slightly taller than the telephone number
highlight, and can be hovered without hovering the phone number highlight

* WebCore.exp.in:


Canonical link: https://commits.webkit.org/153734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172501 268f45cc-cd09-0410-ab3c-d52691b4dbfc